templates/cloud-functions-integration.template.yaml
apiVersion: v1
kind: Service
metadata:
  name: seimei-handan-functions-endpoint
  namespace: seimei-handan
  labels:
    app: seimei-handan-functions
spec:
  type: ExternalName
  externalName: asia-northeast1-${PROJECT_ID}.cloudfunctions.net
  ports:
  - port: 443
    protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seimei-handan-ingress
  namespace: seimei-handan
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "seimei-handan-ip"
    networking.gke.io/managed-certificates: "seimei-handan-ssl-cert"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
  - host: ${DOMAIN_NAME}
    http:
      paths:
      - path: /api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: seimei-handan-functions-service
            port:
              number: 80
      - path: /health
        pathType: Exact
        backend:
          service:
            name: seimei-handan-functions-service
            port:
              number: 80
